@@ -49,6 +49,9 @@
 <td><div class="button2"><a href="tiki-slideshow2.php?page={$page}" class="linkbut">{tr}slides{/tr}</a></div></td>
 {/if}
 <td><div class="button2"><a href="tiki-export_wiki_pages.php?page={$page}" class="linkbut">{tr}export{/tr}</a></div></td>
+{if $feature_wiki_discuss eq 'y'}
+<td><div class="button2"><a href="tiki-view_forum.php?forumId={$wiki_forum_id}&comments_postComment=post&comments_title={$page}&comments_data={"Use this thread to discuss the [tiki-index.php?page="}{$page}{"|"}{$page}{"] page."}&comment_topictype=n" class="linkbut">{tr}discuss{/tr}</a></div></td>
+{/if}
 </tr>
 </table>
 </div>
